#259 change tests